<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>angles</name>
  <version>1.9.11</version>
  <description>This package provides a set of simple math utilities to work
        with angles. The utilities cover simple things like
        normalizing an angle and conversion between degrees and
        radians. But even if you're trying to calculate things like
        the shortest angular distance between two joinst space
        positions of your robot, but the joint motion is constrained
        by joint limits, this package is what you need. The code in
        this packge is stable and well tested. There are no plans for
        major changes in the near future.</description>
  <author email="hsu@osrfoundation.org">John Hsu</author>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/angles</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_nose</test_depend>
  
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
